<resources>
    <string name="app_name">Sprint-3.-Conectividad-y-Buenas-Pr-cticas-de-Seguridad</string>
    <string name="name_title">"Name: "</string>
    <string name="description_character_image">Character\'s image</string>
    <string name="status_title">"Status: "</string>
    <string name="species_type_title">"Species (subspecies): "</string>
    <string name="gender_title">"Gender: "</string>
    <string name="origin_title">"Origin: "</string>
    <string name="location_title">"Localization: "</string>
    <string name="ibBackButton_description">Go back button</string>
    <string name="search_hint">Search…</string>
    <string name="search_button_description">Search button</string>
</resources>