<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/metal_background">

    <ImageButton
        android:id="@+id/ibBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivCharacterImage"
        android:src="@android:drawable/ic_menu_revert"
        android:scaleType="fitXY"
        android:contentDescription="@string/ibBackButton_description" />


    <ImageView
        android:id="@+id/ivCharacterImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ibBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/trail_image"
        android:paddingBottom="10dp"
        android:contentDescription="@string/description_character_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/ivCharacterImage"
        tools:layout_editor_absoluteX="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/ivCharacterImage">

            <TextView
                android:id="@+id/tvCharacterNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/name_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCharacterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterNameTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tvCharacterStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/status_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterNameTitle" />

            <TextView
                android:id="@+id/tvCharacterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterStatusTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterNameTitle"
                tools:text="Vivo" />

            <TextView
                android:id="@+id/tvCharacterSpeciesTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/species_type_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterStatus" />

            <TextView
                android:id="@+id/tvCharacterSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterSpeciesTypeTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterStatusTitle"
                tools:text="Humano" />

            <TextView
                android:id="@+id/tvCharacterType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterSpecies"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterStatusTitle"
                tools:text=" (Null)" />

            <TextView
                android:id="@+id/tvCharacterGenderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/gender_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterSpecies" />

            <TextView
                android:id="@+id/tvCharacterGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterGenderTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterSpeciesTypeTitle"
                tools:text="Hombre" />

            <TextView
                android:id="@+id/tvCharacterOriginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/origin_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterGenderTitle" />

            <TextView
                android:id="@+id/tvCharacterOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterOriginTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterGenderTitle"
                tools:text="Tierra" />

            <TextView
                android:id="@+id/tvCharacterLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_title"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterOriginTitle" />

            <TextView
                android:id="@+id/tvCharacterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3DDC84"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCharacterLocationTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterOriginTitle"
                tools:text="Tierra" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>